# ComfyUI-MuseTalk

./: README.md  nodes.py  pyproject.toml  requirements.txt  wf.json
assets/: BBOX_SHIFT.md
musetalk/utils/: preprocessing.py  utils.py
musetalk/utils/face_parsing/: __init__.py
musetalk/whisper/: audio2feature.py
